# real-time-chat-app

./: Cargo.toml  README.md  docker-compose.yml  project_proposal.md
client/: Cargo.toml
client/src/: commands.rs  common.rs  main.rs  user.rs
mysql/: dump.sql
pubsub/: Cargo.toml  Dockerfile
pubsub/src/: broker.rs  client.rs  common.rs  database.rs  lib.rs  main.rs  server.rs
server/: Cargo.toml  Dockerfile
server/src/: database.rs  main.rs
server/src/endpoints/: chat.rs  common.rs  mod.rs  user.rs
