[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version ="0.12.8", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
tokio = { version = "1", features = ["full"] }
validator = "0.19.0"
regex = "1.11.1"
rustyline = "=5.0.2"
colored = "2.1.0"