[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.1.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-websockets = { version = "0.10.1", features = [
    "client",
    "fastrand",
    "server",
    "sha1_smol",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
