[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
